Fix Render Blueprint syntax for static site

--- a/render.yaml
+++ b/render.yaml
@@ -17,11 +17,11 @@ services:
         value: 8787
 
   # Frontend Static Site
-  - type: static
+  - type: web
     name: birthday-app-web
     runtime: static
     buildCommand: npm install && npm run build
-    publishDir: dist
+    staticPublishPath: ./dist
     envVars:
       - key: VITE_API_URL
         fromService:
