--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
       - key: SUPABASE_KEY
         sync: false
       - key: PROMO_CODES
-        value: "TEST,BIRTHDAY2026"
+        value: "TEST,BIRTHDAY2026,MISTERAIDAM"
       - key: PORT
         value: 8787
 
