--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.26.2",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.562.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
